--- a/public/tonconnect-manifest.json
+++ b/public/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://my-gituser.github.io/my-twa",
-  "name": "My TWA",
-  "iconUrl": "https://my-gituser.github.io/my-twa/icon.png"
+  "url": "https://leopard118.github.io/tontest",
+  "name": "Counter",
+  "iconUrl": "https://leopard118.github.io/tontest/icon.png"
 }
